--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <style>
 body	{
 text-align: center;
-  background: #00ecb9;
+  background: #ffceed;
   font-family: sans-serif;
   font-weight: 100;
 			background-color : #ffceed;
@@ -39,7 +39,7 @@ text-align: center;
 		}
  
 .countdown-title {
-  color: #396;
+  color: white;
   font-weight: 100;
   font-size: 40px;
   margin: 40px 0px 20px;
@@ -57,14 +57,14 @@ text-align: center;
 .countdown-number {
   padding: 10px;
   border-radius: 3px;
-  background: #00bf96;
+  background: #22222275;
   display: inline-block;
 }
  
 .countdown-time {
   padding: 15px;
   border-radius: 3px;
-  background: #00816a;
+  background: #22222275;
   display: inline-block;
 }
  
