--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ text-align: center;
 		}
  
 .countdown-title {
-  color: white;
+  color: #fc2a62ad;
   font-weight: 100;
   font-size: 40px;
   margin: 40px 0px 20px;
@@ -66,14 +66,14 @@ text-align: center;
 .countdown-number {
   padding: 10px;
   border-radius: 3px;
-  background: #22222275;
+  background: #22222222;
   display: inline-block;
 }
  
 .countdown-time {
   padding: 15px;
   border-radius: 3px;
-  background: #22222275;
+  background: #22222222;
   display: inline-block;
 }
  
