--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
    .countdown-title {
    color: #fc2a62ad;
    font-weight: 100;
-   font-size: 40px;
+   font-size: 80pt;
    margin: 40px 0px 20px;
    }
    .countdown {
@@ -55,7 +55,7 @@
    display: inline-block;
    font-weight: 100;
    text-align: center;
-   font-size: 30px;
+   font-size: 40pt;
    }
    .countdown-number {
    padding: 10px;
@@ -72,24 +72,24 @@
    .countdown-text {
    display: block;
    padding-top: 5px;
-   font-size: 16px;
+   font-size: 20pt;
    }
 </style>
 <h1 class="countdown-title not-selectable">До встречи осталось</h1>
-<div id="countdown" class="countdown">
-   <div class="countdown-number">
+<div id="countdown" class="countdown not-selectable">
+   <div class="countdown-number not-selectable">
       <span class="days countdown-time not-selectable"></span>
       <span class="countdown-text not-selectable">Дней</span>
    </div>
-   <div class="countdown-number">
+   <div class="countdown-number not-selectable">
       <span class="hours countdown-time not-selectable"></span>
       <span class="countdown-text not-selectable">Часов</span>
    </div>
-   <div class="countdown-number">
+   <div class="countdown-number not-selectable">
       <span class="minutes countdown-time not-selectable"></span>
       <span class="countdown-text not-selectable">Минут</span>
    </div>
-   <div class="countdown-number">
+   <div class="countdown-number not-selectable">
       <span class="seconds countdown-time not-selectable"></span>
       <span class="countdown-text not-selectable">Секунд</span>
    </div>
